# spaghetti

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  deny.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  release.config.js
crates/spaghetti-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/spaghetti-napi/fixtures/medium/: README.md
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium1/: 0ef54e45-ad9d-5f49-c29c-7e5f34d276b8.jsonl  61997170-1955-b482-3ef5-09898c55bcdb.jsonl  f71de349-2c39-6291-b2b2-cfb2632bb910.jsonl  sessions-index.json
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium2/: 41b28445-9bb4-ccbd-0e88-e72f569a2bf6.jsonl  802fcc0b-dbd4-65e7-eb8d-034587c1ccf5.jsonl  96e17950-a71f-4615-d6e8-3e39e659259e.jsonl  sessions-index.json
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium3/: 1876e8de-70cb-33b8-95a8-d3aa31fedf24.jsonl  51d57672-6155-14f6-b020-07fe7fed3f39.jsonl  sessions-index.json
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium4/: 0bf2be7a-1561-a00c-19ea-69573c3e3b87.jsonl  49d4fa64-0919-036f-ff4c-05fbd9865fbe.jsonl  sessions-index.json
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium5/: 3239d143-f42c-9a09-6d17-ade7b3bcaa58.jsonl  b51c144a-f8e9-81bb-5233-f18f18187aef.jsonl  sessions-index.json
crates/spaghetti-napi/fixtures/medium/.claude/projects/-Users-test-medium6/: 0af779dd-ece4-cd4c-b3eb-ae924b672078.jsonl  sessions-index.json  (+1 more)
crates/spaghetti-napi/fixtures/medium/.claude/todos/: 61997170-1955-b482-3ef5-09898c55bcdb-agent-agent_main.json
crates/spaghetti-napi/fixtures/small/: README.md
crates/spaghetti-napi/fixtures/small-grok/: README.md
crates/spaghetti-napi/fixtures/small/.claude/plans/: fixture-refactor.md  untitled-notes.md
crates/spaghetti-napi/fixtures/small/.claude/todos/: 03ddf851-127d-6cfe-a095-f121d263f759-agent-agent_main.json
crates/spaghetti-napi/npm/darwin-arm64/: package.json
crates/spaghetti-napi/npm/darwin-x64/: package.json
crates/spaghetti-napi/npm/linux-arm64-gnu/: package.json
crates/spaghetti-napi/npm/linux-x64-gnu/: package.json
crates/spaghetti-napi/npm/win32-x64-msvc/: package.json
crates/spaghetti-napi/src/: fingerprint.rs  fts_text.rs  ingest.rs  jsonl_reader.rs  lib.rs  live_ingest.rs  parse_sink.rs  project_parser.rs  schema.rs  types.rs  writer.rs
crates/spaghetti-napi/src/claude/: fingerprint.rs  fts_text.rs  message_extractor.rs  mod.rs  project_parser.rs
crates/spaghetti-napi/src/claude/types/: content.rs  session.rs  tests.rs
crates/spaghetti-napi/src/codex/: message_extractor.rs  mod.rs  reader.rs
crates/spaghetti-napi/src/core/: event.rs  jsonl.rs  mod.rs  text.rs  timefmt.rs  writer.rs
crates/spaghetti-napi/src/grok/: message_extractor.rs  mod.rs  reader.rs  sidecars.rs
crates/spaghetti-napi/src/orchestrate/: ingest.rs  live_ingest.rs  mod.rs
crates/spaghetti-napi/src/types/: artifacts.rs  mod.rs  project.rs  session.rs  workflow.rs
(+179 files in other folders)
