[workspace]
resolver = "2"
members = [
    "crates/spaghetti-napi",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jamesyong-42/spaghetti"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# NAPI
napi        = { version = "3", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "3"
napi-build  = "2"

# JSON / serialization
sonic-rs    = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "trace"] }

# Concurrency
crossbeam-channel = "0.5"
rayon             = "1.10"

# Errors
thiserror = "2"
anyhow    = "1"

# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Filesystem / text
walkdir    = "2"
regex      = "1"
once_cell  = "1"
memmap2    = "0.9"

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"

[profile.dev.package."*"]
opt-level = 2
