[package]
name = "spaghetti-napi"
version = "0.5.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI-RS bindings for the spaghetti ingest core (published to npm, not crates.io)"
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
