[package]
name = "spaghetti-napi"
version = "0.6.0-rc.0" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI-RS bindings for the spaghetti ingest core (published to npm, not crates.io)"
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
